OLD/kubernetes-cluster/ingress/grafana/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: grafana
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  tls:
    - secretName: grafana-ssl
      hosts:
      - grafana.vps-2.cluster-4.de 
  rules:
  - host: "grafana.vps-2.cluster-4.de"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: kube-prometheus-stack-grafana
              port:
                number: 80
